--- a/dragonport_challenge/SpecRunner.html
+++ b/dragonport_challenge/SpecRunner.html
@@ -12,11 +12,11 @@
   <script src="lib/jasmine-2.7.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <!-- <script src="src/Castle.js"></script> -->
+  <script src="src/Castle.js"></script>
   <script src="src/Dragon.js"></script>
 
   <!-- include spec files here... -->
-  <!-- <script src="spec/CastleSpec.js"></script> -->
+  <script src="spec/CastleSpec.js"></script>
   <script src="spec/DragonSpec.js"></script>
 
 </head>
